cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(sortingAlgorithms)
add_subdirectory(searchingAgorithms)
add_subdirectory(maximumSubarrayProblem)
add_subdirectory(binaryTrees)
add_subdirectory(utils)

add_executable(algorithms main.cpp)
target_link_libraries(algorithms PUBLIC SearchingAlgorithmsLib SortingAlgorithmsLib UtilsLib MaximumSubarrayProblemLib BinaryTreesLib)